// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-reference.numeric (provider=cockroachdb, fieldType=BigInt) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=BigInt, js_pg_cockroachdb) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=Float) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=Float, js_pg_cockroachdb) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=Int) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=cockroachdb, fieldType=Int, js_pg_cockroachdb) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=mongodb, fieldType=BigInt) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=mongodb, fieldType=Float) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=mongodb, fieldType=Int) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=BigInt) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=BigInt, js_mariadb) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=BigInt, js_planetscale) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=BigInt, qpe=remote) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=Float) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=Float, js_mariadb) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=Float, js_planetscale) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=Float, qpe=remote) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=Int) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=Int, js_mariadb) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=Int, js_planetscale) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=mysql, fieldType=Int, qpe=remote) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=BigInt) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=BigInt, js_neon) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=BigInt, js_pg) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=BigInt, qpe=remote) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Float) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Float, js_neon) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Float, js_pg) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Float, qpe=remote) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Int) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Int, js_neon) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Int, js_pg) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=postgresql, fieldType=Int, qpe=remote) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=BigInt) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=BigInt, js_better_sqlite3) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=BigInt, js_d1) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=BigInt, js_libsql) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Float) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Float, js_better_sqlite3) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Float, js_d1) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Float, js_libsql) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Int) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Int, js_better_sqlite3) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Int, js_d1) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=sqlite, fieldType=Int, js_libsql) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=BigInt) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=BigInt, js_mssql) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type BigInt but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=Float) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=Float, js_mssql) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Float but found Product.wrongType of type Int."
`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=Int) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;

exports[`field-reference.numeric (provider=sqlserver, fieldType=Int, js_mssql) wrong column numeric type 1`] = `
"
Invalid \`prisma.product.findMany()\` invocation in
/client/tests/functional/field-reference/numeric/tests.ts:0:0

  XX 
  XX // TODO: Edge: skipped because of the error snapshot
  XX test('wrong column numeric type', async () => {
→ XX   const products = prisma.product.findMany(
Input error. Expected a referenced scalar field of type Int but found Product.wrongType of type Float."
`;
